--- a/seeds/seed-configurations.yml
+++ b/seeds/seed-configurations.yml
@@ -1,13 +1,16 @@
 seeds:
   - name: lkp_divisions
     config:
-      schema: lookup_dev
+      schema: lookup_prod
+      #schema: lookup_dev
 
 
   - name: lkp_categories
     config:
-      schema: lookup_dev
+      schema: lookup_prod
+      #schema: lookup_dev
 
   - name: lkp_shippers
     config:
-      schema: lookup_dev     
+      schema: lookup_prod
+      #schema: lookup_dev    
