--- a/seeds/seed-configurations.yml
+++ b/seeds/seed-configurations.yml
@@ -1,16 +1,16 @@
 seeds:
   - name: lkp_divisions
     config:
-      schema: lookup_prod
-      #schema: lookup_dev
+      #schema: lookup_prod
+      schema: "{{env_var('DBT_LKPSCHEMA_NAME', 'lkp_dev')}}"         #lookup_dev  
 
 
   - name: lkp_categories
     config:
-      schema: lookup_prod
-      #schema: lookup_dev
+      #schema: lookup_prod
+      schema: "{{env_var('DBT_LKPSCHEMA_NAME', 'lkp_dev')}}"         #lookup_dev
 
   - name: lkp_shippers
     config:
-      schema: lookup_prod
-      #schema: lookup_dev    
+      #schema: lookup_prod
+      schema: "{{env_var('DBT_LKPSCHEMA_NAME', 'lkp_dev')}}"         #lookup_dev
